--- a/gui/us05/form_us05.ui
+++ b/gui/us05/form_us05.ui
@@ -82,6 +82,9 @@
     <property name="text">
      <string/>
     </property>
+    <property name="echoMode">
+     <enum>QLineEdit::PasswordEchoOnEdit</enum>
+    </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
