--- a/gui/us09/form_us09.ui
+++ b/gui/us09/form_us09.ui
@@ -67,8 +67,8 @@
    <widget class="QPushButton" name="save">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>160</y>
+      <x>340</x>
+      <y>210</y>
       <width>141</width>
       <height>31</height>
      </rect>
@@ -100,6 +100,69 @@
     </property>
     <property name="text">
      <string>瀏覽...</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="show_cmd_window">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>123</y>
+      <width>171</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>新細明體</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>顯示</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>180</y>
+      <width>831</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>120</y>
+      <width>131</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>新細明體</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::PreventContextMenu</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    border: 1px solid black; /* 邊框粗細與顏色 */
+    padding: 2px;           /* 內邊距 */
+}</string>
+    </property>
+    <property name="text">
+     <string>偵錯視窗:</string>
+    </property>
+    <property name="scaledContents">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
