--- a/gui/us01/form_us01.ui
+++ b/gui/us01/form_us01.ui
@@ -6,19 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>704</width>
-    <height>452</height>
+    <width>746</width>
+    <height>494</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="dockNestingEnabled">
+   <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTreeView" name="treeView">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
+      <y>30</y>
       <width>561</width>
       <height>401</height>
      </rect>
@@ -40,7 +43,7 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>20</y>
+      <y>30</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -65,7 +68,7 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>90</y>
+      <y>100</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -90,7 +93,7 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>160</y>
+      <y>170</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -115,7 +118,7 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>230</y>
+      <y>240</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -133,13 +136,41 @@
      <string>發佈</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pd_download">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>0</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>新細明體</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="toolTip">
+     <string>下載雲端資料至本地</string>
+    </property>
+    <property name="text">
+     <string>下載</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>704</width>
+     <width>746</width>
      <height>25</height>
     </rect>
    </property>
@@ -153,6 +184,14 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>treeView</tabstop>
+  <tabstop>pd_download</tabstop>
+  <tabstop>pd_edit</tabstop>
+  <tabstop>pd_check</tabstop>
+  <tabstop>pd_upload</tabstop>
+  <tabstop>pd_release</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
