--- a/gui/us01/form_us01.ui
+++ b/gui/us01/form_us01.ui
@@ -54,6 +54,9 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="toolTip">
      <string>以編輯器開啟</string>
     </property>
@@ -78,6 +81,9 @@
       <family>新細明體</family>
       <pointsize>12</pointsize>
      </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
     </property>
     <property name="toolTip">
      <string>檢查資料</string>
@@ -104,6 +110,9 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="toolTip">
      <string>上傳預覽版</string>
     </property>
@@ -128,6 +137,9 @@
       <family>新細明體</family>
       <pointsize>12</pointsize>
      </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
     </property>
     <property name="toolTip">
      <string>正式發佈</string>
