--- a/gui/us01/form_us01.ui
+++ b/gui/us01/form_us01.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>774</width>
+    <width>917</width>
     <height>482</height>
    </rect>
   </property>
@@ -204,13 +204,41 @@
      <string>檢視</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="file">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>0</y>
+      <width>101</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>新細明體</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="toolTip">
+     <string>正式發佈</string>
+    </property>
+    <property name="text">
+     <string>檔案</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>774</width>
+     <width>917</width>
      <height>25</height>
     </rect>
    </property>
