--- a/gui/us01/form_us01.ui
+++ b/gui/us01/form_us01.ui
@@ -44,7 +44,7 @@
      <rect>
       <x>130</x>
       <y>0</y>
-      <width>151</width>
+      <width>121</width>
       <height>51</height>
      </rect>
     </property>
@@ -70,9 +70,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>250</x>
       <y>0</y>
-      <width>151</width>
+      <width>121</width>
       <height>51</height>
      </rect>
     </property>
@@ -98,9 +98,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>470</x>
       <y>0</y>
-      <width>101</width>
+      <width>81</width>
       <height>51</height>
      </rect>
     </property>
@@ -126,9 +126,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>660</x>
+      <x>550</x>
       <y>0</y>
-      <width>101</width>
+      <width>81</width>
       <height>51</height>
      </rect>
     </property>
@@ -182,9 +182,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>390</x>
       <y>0</y>
-      <width>101</width>
+      <width>81</width>
       <height>51</height>
      </rect>
     </property>
@@ -210,9 +210,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>630</x>
       <y>0</y>
-      <width>101</width>
+      <width>81</width>
       <height>51</height>
      </rect>
     </property>
@@ -232,6 +232,34 @@
      <string>檔案</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="content">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>0</y>
+      <width>81</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>新細明體</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="toolTip">
+     <string>正式發佈</string>
+    </property>
+    <property name="text">
+     <string>文章</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -239,7 +267,7 @@
      <x>0</x>
      <y>0</y>
      <width>917</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
